kubernetes/core/dashboard/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    tailscale.com/tags: tag:k8s-operator
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: 'Kubernetes Dashboard'
    gethomepage.dev/description: 'Kubernetes cluster management interface'
    gethomepage.dev/group: 'Monitoring'
    gethomepage.dev/icon: 'kubernetes.png'
    gethomepage.dev/href: 'https://kubernetes-dashboard.${DOMAIN}'
    # gethomepage.dev/widget.type: 'kubernetes'
    # gethomepage.dev/widget.url: 'https://kubernetes-dashboard.${DOMAIN}'
    gethomepage.dev/pod-selector: 'app.kubernetes.io/name=kubernetes-dashboard'
spec:
  ingressClassName: tailscale
  rules:
    - host: kubernetes-dashboard
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
  tls:
    - hosts:
        - kubernetes-dashboard
